2010-08-15  Kirit Saelensminde  <kirit@felspar.com>
 Data handling
 - Started adding a push_back function that allows consistent pushing back of data across a wide range of types. Currently supports std::list, std::vector and fostlib::json.

2010-04-28  Kirit Saelensminde  <kirit@felspar.com>
 Threading
 - Added accessors to future so that we can see if there is an exception or a if future (result) is available.

2010-04-28  Kirit Saelensminde  <kirit@felspar.com>
 Basic library handling
 - Added fost/relops.hpp and started to use it to remove a lot of duplicated code.

2010-04-28  Kirit Saelensminde  <kirit@felspar.com>
 Logging
 - Added a YAML record class for outputting YAML log records.

2010-04-06  Kirit Saelensminde  <kirit@felspar.com>
 Parsers
 - Removed the parser instances because they're not thread safe.

2010-04-01  Kirit Saelensminde  <kirit@felspar.com>
 Exception handling
 - Allow us to throw not implemented exceptions based on Boost system errors.

2010-03-29  Kirit Saelensminde  <kirit@felspar.com>
 String handling
 - Added coercion from string::hex_string to std::size_t

2010-03-22  Kirit Saelensminde  <kirit@felspar.com>
 ChangeLog
 - Added ChangeLog