@@ -1,3 +1,7 @@
+2010-09-17  Kirit Saelensminde  <kirit@felspar.com>
+ Data handling
+ - Started to add in insert for JSON containers
+
 2010-08-15  Kirit Saelensminde  <kirit@felspar.com>
  Data handling
  - Started adding a push_back function that allows consistent pushing back of data across a wide range of types. Currently supports std::list, std::vector and fostlib::json.
